GNOME Bugzilla – Bug 703970
Ignore some spammy events in meta_spew_event
Last modified: 2013-07-15 16:49:51 UTC
See patches. Just for debugging sake.
Created attachment 248879 [details] [review] display: Ignore XSyncAlarmNotify in meta_spew_event
Created attachment 248880 [details] [review] display: Ignore _NET_WM_USER_TIME PropertyNotifies These are spammy as well.
Review of attachment 248879 [details] [review]: Definitely. This is probably one of those which can deadlock you...
Review of attachment 248880 [details] [review]: Yeah, this one too.
Attachment 248879 [details] pushed as 57bc974 - display: Ignore XSyncAlarmNotify in meta_spew_event Attachment 248880 [details] pushed as 21fe5be - display: Ignore _NET_WM_USER_TIME PropertyNotifies