display: Ignore XSyncAlarmNotify in meta_spew_event

https://bugzilla.gnome.org/show_bug.cgi?id=703970