src/core/display.c
@@ -3790,6 +3790,9 @@ meta_spew_event (MetaDisplay *display,
   if (event->type == (display->damage_event_base + XDamageNotify))
     return;
 
+  if (event->type == (display->xsync_event_base + XSyncAlarmNotify))
+    return;
+
   input_event = get_input_event (display, event);
 
   if (input_event)
